plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    //웹
    implementation 'org.springframework.boot:spring-boot-starter'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.projectlombok:lombok:1.18.26'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    //JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    //runtimeOnly 'com.mysql:mysql-connector-j'
    //OAuth2.0
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    //jwt
    dependencies {
        implementation 'io.jsonwebtoken:jjwt-api:0.12.2'
        runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.2'
        runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.2'
    }

    //시큐리티
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    testImplementation 'org.springframework.security:spring-security-test'
    //롬복
    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'

    runtimeOnly 'com.h2database:h2'
    //providedCompile 'jakarta.servlet:jakarta.servlet-api:4.0.4'
    
    // 레디스
	  implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    // 스웨거
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
tasks.withType(JavaCompile) {
    options.compilerArgs << "-parameters"
}
